Bug 822558: Don't confuse subprocesses about ended touches. r=mwu a=blocking-basecamp